--- a/css/main.css
+++ b/css/main.css
@@ -429,7 +429,7 @@ body {
   flex: none;
   border: none;
   background: #FFFFFF;
-  padding: 0 5px;
+  padding: 0.3rem 0.5rem;
   border-radius: 0.3rem;
   user-select: none;
   display: flex;
@@ -437,8 +437,8 @@ body {
   justify-content: center;
 }
 .tab__item .header-tab .back-btn svg {
-  height: 2rem;
-  width: 2rem;
+  height: 1.2rem;
+  width: 1.2rem;
 }
 .tab__item .header-tab .back-btn svg * {
   fill: #333333;
@@ -463,7 +463,7 @@ body {
 .tab__item .content-tab .text-content-tab {
   font-family: "Poppins-Regular";
   color: #FFFFFF;
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 2rem;
   user-select: none;
 }
@@ -524,7 +524,7 @@ body {
   border-radius: 0.3rem;
   background: #FFFFFF;
   user-select: none;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
 
 @media only screen and (max-width: 600px) {
@@ -602,7 +602,7 @@ body {
 #generator-tab-item .generate-option-container .option-content .option-generate .option-name {
   color: #FFFFFF;
   font-family: "Poppins-Regular";
-  font-size: 1rem;
+  font-size: 0.9rem;
   text-align: center;
   align-self: center;
   line-height: 1.8rem;
@@ -668,7 +668,7 @@ body {
   border-radius: 0.3rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   height: 70%;
-  width: 70%;
+  width: 85%;
   display: flex;
   flex-direction: column;
   grid-row-gap: 25px;
@@ -678,7 +678,7 @@ body {
   padding-bottom: 20px;
   border-bottom: 2px solid rgba(51, 51, 51, 0.2);
   font-family: "Poppins-Medium";
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -695,8 +695,8 @@ body {
   justify-content: center;
 }
 #generator-tab-item .modal-generator .content .header-conten .close-modal-qr-code svg {
-  height: 2rem;
-  width: 2rem;
+  height: 1.5rem;
+  width: 1.5rem;
 }
 #generator-tab-item .modal-generator .content .header-conten .close-modal-qr-code svg * {
   fill: #333333;
@@ -709,6 +709,7 @@ body {
   display: flex;
   flex-direction: column;
   grid-row-gap: 20px;
+  padding-bottom: 10px;
 }
 #generator-tab-item .modal-generator .content .box .form-information {
   display: flex;
@@ -739,6 +740,16 @@ body {
 #generator-tab-item .modal-generator .content .box .form-information .invalid-input {
   box-shadow: rgba(255, 81, 71, 0.55) 0px 0px 0.29em, rgba(255, 81, 71, 0.08) 0px 0.29em 1em !important;
 }
+#generator-tab-item .modal-generator .content .box .generate-btn-await::after {
+  content: "";
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+}
 #generator-tab-item .modal-generator .content .box .btn-generate {
   padding: 15px;
   font-family: "Poppins-Regular";
@@ -752,6 +763,7 @@ body {
   border-radius: 0.3rem;
   background: #FF8066;
   flex: none;
+  position: relative;
 }
 #generator-tab-item .modal-generator .content .box .visible {
   display: flex !important;
@@ -795,6 +807,32 @@ body {
   border-radius: 0.3rem;
   background: #60E4C2;
   flex: none;
+}
+#generator-tab-item .modal-generator .content .box .message-visible {
+  display: flex !important;
+}
+#generator-tab-item .modal-generator .content .box .message-error {
+  flex: none;
+  display: none;
+  position: relative;
+  padding: 20px;
+  align-self: stretch;
+  background: rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  border-radius: 0.3rem;
+  font-family: "Poppins-Medium";
+  font-size: 0.8rem;
+  color: #333333;
+}
+#generator-tab-item .modal-generator .content .box .message-error::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 8px;
+  background: #ff5147;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .option-content::-webkit-scrollbar {
