--- a/css/main.css
+++ b/css/main.css
@@ -1045,6 +1045,41 @@ body {
   align-self: stretch !important;
 }
 
+.about-container {
+  display: flex;
+  flex-direction: column;
+  grid-row-gap: 25px;
+  overflow: hidden;
+}
+.about-container p {
+  font-family: "Poppins-Regular";
+  text-align: justify;
+  color: #FFFFFF;
+  font-size: 0.9rem;
+  opacity: 0.8;
+  line-height: 1.2rem;
+}
+.about-container a {
+  padding: 15px 30px;
+  flex: none;
+  font-family: "Poppins-Medium";
+  color: #333333;
+  outline: none;
+  border: none;
+  border-radius: 0.3rem;
+  background: #FFFFFF;
+  user-select: none;
+  text-align: center;
+  font-size: 0.9rem;
+  margin-top: 25px;
+}
+.about-container span {
+  text-align: center;
+  color: #FFFFFF;
+  font-size: 0.8rem;
+  opacity: 0.8;
+}
+
 @media only screen and (max-width: 1000px) {
   .content-tab {
     padding: 120px 20px 10px 20px !important;
